--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="login_failed">登录失败</string>
 
     <string name="button_text">看VIP视频的 ☜(ˆ▽ˆ)☞ 就点我</string>
+    <string name="affirm">免费使用 不得用于任何商业用途</string>
 </resources>
